Added mac-cheese.html information and updated links

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <li><a href="mc-cheese.html">Mac and Cheese Recipe</a></li>
 </body>
 </html>
