--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,9 +6,10 @@
 <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Lasagna Recipe</h1>
     <ul>
         <li><a href="../index.html">Home</a></li>
+        <li><a href="mc-cheese.html">Mac and Cheese Recipe</a></li>
     </ul>
     
     <br>
