Fixed unordered list and added pancake link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <li><a href="mc-cheese.html">Mac and Cheese Recipe</a></li>
-</body>
-</html>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="mac-cheese.html">Mac and Cheese Recipe</a></li>
+        <li><a href="pancakes.html">Pancakes Recipe</a></li>/body>
+    </ul>
+    </html>
