Finished links to pages and pancakes.html recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,8 @@
     <h1>Lasagna Recipe</h1>
     <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="mc-cheese.html">Mac and Cheese Recipe</a></li>
+        <li><a href="mac-cheese.html">Mac and Cheese Recipe</a></li>
+        <li><a href="pancakes.html">Pancakes Recipe</a></li>
     </ul>
     
     <br>
