--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="mac-cheese.html">Mac and Cheese Recipe</a></li>
-        <li><a href="pancakes.html">Pancakes Recipe</a></li>/body>
+        <li><a href="recipes/mac-cheese.html">Mac and Cheese Recipe</a></li>
+        <li><a href="recipes/pancakes.html">Pancakes Recipe</a></li>
     </ul>
     </html>
