--- a/recipes/mac-cheese.html
+++ b/recipes/mac-cheese.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="pancakes.html">Pancakes Recipe</a></li>
     </ul>
     
     <br>
